@@ -240,6 +240,7 @@ Release 0.9.9
 - add 'redirpath' default seo rewrite type that is the same as path, except
   that 'index.php/' is also dropped from the url; this requires a single
 	rewrite rule (.htaccess, etc.) same as, for example, Wordpress uses
+- prefix set_magic_quotes_runtime in Cache_Lite.php with '@'
 
 Release 0.9.8
 - add Savant3 and experimental views (not used yet)
